--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,16 @@
 apply plugin: 'com.android.application'
 
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     signingConfigs {
-        Default {
-            keyAlias 'yymin1022'
-            keyPassword 'dydals1022'
-            storeFile file('D:/AppProjects/debug.keystore')
-            storePassword 'dydals1022'
+        config {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
         }
     }
     compileSdkVersion 28
@@ -14,8 +18,8 @@ android {
         applicationId "com.sungbospot.lunch"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 26
-        versionName "8.5_release1"
+        versionCode 27
+        versionName "8.5_release2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,9 +33,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'net.htmlparser.jericho:jericho-html:3.4'
     testImplementation 'junit:junit:4.12'
